--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* color variables for easier to remember names */
 :root {
   --primary: #238c73;
-  --secondary: #000000;
+  --secondary: #f2efef;
   --pop: #3333FF;
 }
 
